Update vercel.json to include builds and routes

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,20 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "*.html",
+      "use": "@vercel/static"
+    }
+  ],
   "routes": [
     { "src": "/api/(.*)", "dest": "server.js" },
-    { "src": "/(.*)", "dest": "/login.html" }
+    { "src": "/login.html", "dest": "login.html" },
+    { "src": "/admin.html", "dest": "admin.html" },
+    { "src": "/index.html", "dest": "index.html" },
+    { "src": "/", "dest": "login.html" }
   ]
 }
